Use lodepng 3.0.0-alpha1. Failed attempt.

--- a/imageflow_core/Cargo.toml
+++ b/imageflow_core/Cargo.toml
@@ -47,7 +47,7 @@ imgref = "1.4.1"
 gif = "*"
 rgb = "0.8.16"
 imagequant = "2.12.5"
-lodepng = "2.4.0"
+lodepng = "3.0.0-alpha.1"
 libwebp-sys = "0.3"
 
 jpeg-decoder = "0.1"
