--- a/imageflow_core/Cargo.toml
+++ b/imageflow_core/Cargo.toml
@@ -48,6 +48,7 @@ gif = "*"
 rgb = "0.8.16"
 imagequant = "2.12.5"
 lodepng = "3.0.0-alpha.1"
+flate2 = { version = "1.0", features = ["zlib"], default-features = false }
 libwebp-sys = "0.3"
 
 jpeg-decoder = "0.1"
